Crash on moving an object in edit mode #37445

Closed
opened 2013-11-14 14:22:19 +01:00 by Vitaliy · 12 comments

System Information
Windows 7 x64

Blender Version
Broken: Blender 2.67.0 r57141 and later
Worked: Blender 2.66.1 r55078

Short description of error
2 objects. 1st have subdivision surface modifier with applying during edit mode turned on and snapping to other objects. 2nd have shrinkwrap targeted on 1st. Crash happens when trying to move vertices of the 1st object in edit mode.

Exact steps for others to reproduce the error
Select "Cube" -> go to Edit mode -> G to grab -> Crash

bug.blend

**System Information** Windows 7 x64 **Blender Version** Broken: Blender 2.67.0 r57141 and later Worked: Blender 2.66.1 r55078 **Short description of error** 2 objects. 1st have subdivision surface modifier with applying during edit mode turned on and snapping to other objects. 2nd have shrinkwrap targeted on 1st. Crash happens when trying to move vertices of the 1st object in edit mode. **Exact steps for others to reproduce the error** Select "Cube" -> go to Edit mode -> G to grab -> Crash [bug.blend](https://archive.blender.org/developer/F27188/bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ualogic

Added subscriber: @ualogic

Added subscriber: @ehalpin12

Added subscriber: @ehalpin12

Added subscriber: @Sergey

Added subscriber: @Sergey

Uploading sample file.

Please note that uploading sample .blend files always helps understanding what's exactly going on. In your case only managed to reproduce the issue with snapping to face, other snapping modes didn't show the issue. Such a small detail might cost reasonable amount a time to figure out when reproducing the bug :)

Uploading sample file. Please note that uploading sample .blend files always helps understanding what's exactly going on. In your case only managed to reproduce the issue with snapping to face, other snapping modes didn't show the issue. Such a small detail might cost reasonable amount a time to figure out when reproducing the bug :)
Author

Sorry for beeing noob and not making it in the way it should be, but when I tried to upload file(clicking on the first upload button I saw) it said that i need to drag and drop the file into the comment text area, so you can see my file in the end of the description :)

Sorry for beeing noob and not making it in the way it should be, but when I tried to upload file(clicking on the first upload button I saw) it said that i need to drag and drop the file into the comment text area, so you can see my file in the end of the description :)

Ouuch, missed that, sorry! :)

Ouuch, missed that, sorry! :)
Member

Added subscriber: @Lockal

Added subscriber: @Lockal

This issue was referenced by blender/blender-addons-contrib@2b946f4297

This issue was referenced by blender/blender-addons-contrib@2b946f42970bf4f3b8ce8e5c9b79451745309d89

This issue was referenced by 2b946f4297

This issue was referenced by 2b946f42970bf4f3b8ce8e5c9b79451745309d89

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2b946f4297.

Closed by commit 2b946f4297.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37445
No description provided.